--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -1,30 +1,37 @@
 * Hydra-Ergo  Some ergonomic shortcuts for common uses.
-#+BEGIN_SRC emacs-lisp :results silent     
-(defhydra hydra-ergo  (evil-normal-state-map "SPC" evil-motion-state-map :color blue) 
-"hydra-ergo "    
-("a" execute-extended-command :color blue)
-("f" ivy-switch-buffer :color blue)
-("i" hydra-ergo-i-menu/body :color blue)
-("o" (lambda ()
-	(interactive)
-	(other-window 1)
-	(hydra-ergo-o-menu/body)) :color blue)
-("ö" save-buffer :color blue)
-("j" evil-search-forward :color blue)
-("k" evil-search-backward :color blue)
-("l" swiper :color blue))
-(global-set-key (kbd "M-SPC") 'hydra-ergo/body)
+#+BEGIN_SRC emacs-lisp :results silent  
+  (defhydra hydra-ergo (evil-normal-state-map "SPC" evil-motion-state-map :color blue)
+  "hydra-ergo "
+  ("a" execute-extended-command :color blue)
+  ("f" ivy-switch-buffer :color blue)
+  ("i" hydra-ergo-i-menu/body :color blue)
+  ("o" (lambda ()
+	  (interactive)
+	  (other-window 1)
+	  (hydra-ergo-o-menu/body)) :color blue)
+  ("ö" save-buffer :color blue)
+  ("j" evil-search-forward :color blue)
+  ("k" evil-search-backward :color blue)
+  ("l" swiper :color blue)
+  ("c" hydra-ergo-c-menu/body :color blue))
+  (global-set-key (kbd "M-SPC") 'hydra-ergo/body)
 #+END_SRC
 
-i-menu  
+i-menu 
 #+BEGIN_SRC emacs-lisp :results silent
 (defhydra hydra-ergo-i-menu (:color blue)
 	"i-menu"
 	("i" find-file)
 	("o" bookmark-jump))
 #+END_SRC
-o-menu 
+o-menu
 #+BEGIN_SRC emacs-lisp :results silent
 (defhydra hydra-ergo-o-menu (:color red)
 	("o" other-window :color red))
+#+END_SRC
+c-menu
+#+BEGIN_SRC emacs-lisp :results silent
+(defhydra hydra-ergo-c-menu (:color blue)
+  ("n" org-narrow-to-subtree)
+  ("d" widen))
 #+END_SRC
