--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -10,6 +10,7 @@
 	  (other-window 1)
 	  (hydra-ergo-o-menu/body)) :color blue)
   ("ö" save-buffer :color blue)
+  ("w" ace-window :color blue)
   ("j" evil-search-forward :color blue)
   ("k" evil-search-backward :color blue)
   ("l" swiper :color blue)
