bind fixup-whitespaces to ","

--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -24,7 +24,8 @@
   ("2" split-window-below :color blue)
   ("3" split-window-right :color blue)
   ("4" delete-other-windows :color blue)
-  ("0" delete-window :color blue))
+  ("0" delete-window :color blue)
+  ("," fixup-whitespace :color blue))
   (global-set-key (kbd "M-SPC") 'hydra-ergo/body)
 #+END_SRC
 i-menu 
