set org-pomodoro-length from header property before new pomodoro

--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -42,7 +42,10 @@
      ("d" widen)
      ("i" hydra-ergo-org-download/body)
      ("j" (org-brain-visualize (org-brain-entry-at-pt)))
-     ("o" (org-pomodoro))
+     ("o" (lambda ()
+	    (interactive)
+	    (set-pomodoro-len-from-property)
+	    (org-pomodoro)))
      ("x" (org-cut-special))
      ("w" (org-copy-special))
      ("y" (org-paste-special nil)))
@@ -173,4 +176,12 @@
       (evil-backward-WORD-begin)
       (insert-char c)
       (evil-forward-WORD-end))
+#+END_SRC
+#+BEGIN_SRC emacs-lisp :results silent
+(defun set-pomodoro-len-from-property ()
+  "Pomodoro length can be set by org property."
+  (let ((len (org-entry-get (point) "POMODORO")))
+    (if len
+	(setq  org-pomodoro-length (string-to-number len))
+      (setq org-pomodoro-length 25))))
 #+END_SRC
