--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -176,11 +176,11 @@
     yasnippets and yankpad
  #+BEGIN_SRC emacs-lisp :results silent 
    (defhydra hydra-ergo-y-menu (:color blue)
-     ("d" aya-create)
-     ("f" aya-expand)
-     ("m" yankpad-map)
-     ("e" yankpad-expand)
-     ("c" yankpad-set-category))
+     ("d" aya-create "aya-create")
+     ("f" aya-expand "aya-expand")
+     ("m" yankpad-map "yankpad-map")
+     ("e" yankpad-expand "yankpad-expand")
+     ("c" yankpad-set-category "yankpad-set-category"))
  #+END_SRC
 ** 5-menu
    :PROPERTIES:
