m-menu-f → clone-indirect-buffer

--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -111,7 +111,7 @@
       ;; ("c" goto-char)
       ("d" mark-defun)
       ("e" list-matching-lines)
-      ;; ("f" goto-line)
+      ("f" (switch-to-buffer (clone-indirect-buffer nil nil)))
       ("i" delete-non-matching-lines)
       ("j" copy-to-register)
       ("l" insert-register)
