--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -3,38 +3,42 @@
   :ID:       3c84cb21-89c4-4784-a166-207419370f2e
   :END:
 #+BEGIN_SRC emacs-lisp :results silent  
-  (defhydra hydra-ergo (evil-normal-state-map "SPC" :color blue)
-  "hydra-ergo "
-  ("a" execute-extended-command :color blue)
-  ("d" hydra-ergo-d-menu/body :color blue)
-  ("e" hydra-ergo-e-menu/body :color blue)
-  ("f" ivy-switch-buffer :color blue)
-  ("i" hydra-ergo-i-menu/body :color blue)
-  ("o" (lambda ()
-	  (interactive)
-	  (other-window 1)
-	  (hydra-ergo-o-menu/body)) :color blue)
-  ("r" hydra-ergo-r-menu/body :color blue)
-  ("ö" save-buffer :color blue)
-  ("w" ace-window :color blue)
-  ("j" evil-search-forward :color blue)
-  ("k" evil-search-backward :color blue)
-  ("l" swiper :color blue)
-  ("m" hydra-ergo-m-menu/body :color blue)
-  ("s" hydra-ergo-s-menu/body :color blue)
-  ("t" hydra-ergo-t-menu/body :color blue)
-  ("y" hydra-ergo-y-menu/body :color blue)
-  ("§" hydra-ergo-§-menu/body :color blue)
-  ("c" hydra-ergo-c-menu/body :color blue)
-  ("2" split-window-below :color blue)
-  ("3" split-window-right :color blue)
-  ("4" delete-other-windows :color blue)
-  ("5" hydra-ergo-5-menu/body :color blue)
-  ("0" delete-window :color blue)
-  ("<" calendar :color blue)
-  ("," fixup-whitespace :color blue))
-  ;; (global-set-key (kbd "M-SPC") 'hydra-ergo/body)
-  ;; (define-key evil-motion-state-map (kbd "SPC") 'hydra-ergo/body)
+    (defhydra hydra-ergo (evil-normal-state-map "SPC" :color blue)
+    "hydra-ergo "
+    ("a" execute-extended-command :color blue)
+    ("d" hydra-ergo-d-menu/body :color blue)
+    ("e" hydra-ergo-e-menu/body :color blue)
+    ("f" ivy-switch-buffer :color blue)
+    ("i" hydra-ergo-i-menu/body :color blue)
+    ("o" (lambda ()
+	    (interactive)
+	    (other-window 1)
+	    (hydra-ergo-o-menu/body)) :color blue)
+    ("r" hydra-ergo-r-menu/body :color blue)
+    ("ö" save-buffer :color blue)
+    ("w" ace-window :color blue)
+    ("j" evil-search-forward :color blue)
+    ("k" evil-search-backward :color blue)
+    ("l" swiper :color blue)
+    ("m" hydra-ergo-m-menu/body :color blue)
+    ("s" hydra-ergo-s-menu/body :color blue)
+    ("t" hydra-ergo-t-menu/body :color blue)
+    ("y" hydra-ergo-y-menu/body :color blue)
+    ("§" hydra-ergo-§-menu/body :color blue)
+    ("c" hydra-ergo-c-menu/body :color blue)
+    ("2" split-window-below :color blue)
+    ("3" split-window-right :color blue)
+    ("4" delete-other-windows :color blue)
+    ("5" hydra-ergo-5-menu/body :color blue)
+    ("0" delete-window :color blue)
+    ("<" calendar :color blue)
+    ("å" (lambda ()
+	   (interactive)
+	   (setq abbr-swe (not abbr-swe))
+	   (load "/mnt/hgfs/H/temp/my-abbrev.el")))
+    ("," fixup-whitespace :color blue))
+    ;; (global-set-key (kbd "M-SPC") 'hydra-ergo/body)
+    ;; (define-key evil-motion-state-map (kbd "SPC") 'hydra-ergo/body)
 #+END_SRC
    Create an intercept mode map for hydra-ergo. This will have a higher precedence than the normal and motion state maps
    [[https://github.com/noctuid/evil-guide#unbinding-a-key][found here]] 
